# Infinity2.0

./: Cargo.toml  README.md
.github/: copilot-instructions.md
issues/: 1.md  chat-feature-request.md  investigate-vulnerability-alert.md
src/: main.rs
static/css/: style.css
templates/: index.html
